# ai2sql

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  webpack.config.js
ai2sql/: __main__.py  cli.py
ai2sql/config/: default.yml
ai2sql/core/: dialects.py
ai2sql/core/chat/: __init__.py  chat_manager.py
ai2sql/core/rules/: __init__.py  rule_engine.py
ai2sql/core/schema/: __init__.py  schema_manager.py
ai2sql/core/tools/: __init__.py  sql_analyzer.py  tool_registry.py
ai2sql/editor/: __init__.py  session.py
ai2sql/utils/: cli.py  config.py  sql_writer.py
generated_sql/: 20250210_233041.sql
scripts/: test.sh
src/: SidebarProvider.ts  extension.ts
src/services/: ai-service-factory.ts  ai-service.ts  base-ai-service.ts  openai-service.ts  session-manager.ts  unified-ai-service.ts
src/webview/: ChatPanel.ts
tests/: conftest.py  test.sh  test_dialects.py  test_integration.py  test_schema_manager.py  test_sql_analyzer.py  test_tool_registry.py
tests/data/: test_config.yml  test_schema.yml
webview-ui/: package-lock.json  package.json  webpack.config.js
webview-ui/src/: App.tsx  index.css  index.html
webview-ui/src/components/: ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx  SQLMessage.tsx  SessionList.tsx
webview-ui/src/services/: vscode.ts
webview-ui/src/types/: messages.ts  session.ts  vscode.d.ts
