[tool.poetry]
name = "ai2sql"
version = "0.1.0"
description = "An AI-powered SQL IDE that converts natural language to SQL queries"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "ai2sql"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
openai = "^1.0.0"
sqlglot = ">=11.0.0"
click = "^8.1.3"
rich = "^13.3.0"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ai2sql = "ai2sql.__main__:cli"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=ai2sql --cov-report=term-missing" 